--- a/dev_index.html
+++ b/dev_index.html
@@ -17,14 +17,18 @@
     <script src="custom/blocks/entities.js"></script>
     <script src="custom/blocks/data.js"></script>
     <script src="custom/generators/sql.js"></script>
+    <script src="custom/generators/sql/block_alter.js"></script>
+    <script src="custom/generators/sql/block_create.js"></script>
     <script src="custom/generators/sql/block_select.js"></script>
     <script src="custom/generators/sql/block_drop.js"></script>
     <script src="custom/generators/sql/block_insert.js"></script>
     <script src="custom/generators/sql/block_update.js"></script>
+    <script src="custom/generators/sql/columndefinition.js"></script>
     <script src="custom/generators/sql/entities.js"></script>
     <script src="custom/generators/sql/conditions.js"></script>
     <script src="custom/generators/sql/data.js"></script>
     <script src="msg/js/de.js"></script>
+    <script src="custom/msg/js/de.js"></script>
     <style>
         body {
             background-color: #fff;
@@ -46,66 +50,74 @@
 </div>
 
 <xml id="toolbox" style="display: none">
-    <block type="alter_rename_to">
-        <field name="newname">new_tablename</field>
-    </block>
-    <block type="block_alter"></block>
-    <block type="alter_rename_column">
-        <field name="newcolumnname">new_columnname</field>
-    </block>
-    <block type="columndefinition_type">
-        <field name="TYPE">integer</field>
-        <field name="NAME">0</field>
-    </block>
-    <block type="alter_add_column"></block>
-    <block type="select_group_having"></block>
-    <block type="block_create">
-        <field name="tablename">tablename</field>
-    </block>
-    <block type="block_select"></block>
-    <block type="block_subselect"></block>
-    <block type="block_update"></block>
-    <block type="update_where"></block>
-    <block type="columndefinition">
-        <field name="colname">columnname</field>
-        <field name="primkey">FALSE</field>
-        <field name="primkeya">FALSE</field>
-        <field name="nnull">FALSE</field>
-        <field name="unique">FALSE</field>
-        <field name="default">FALSE</field>
-    </block>
-    <block type="entity_column_statement">
-        <field name="column">column</field>
-    </block>
-    <block type="select_join">
-        <field name="jointype">NATURAL</field>
-    </block>
-    <block type="block_insert"></block>
-    <block type="cond_not"></block>
-    <block type="select_where"></block>
-    <block type="select_order"></block>
-    <block type="cond_or"></block>
-    <block type="columntovalue"></block>
-    <block type="select_limit">
-        <field name="limit">1</field>
-    </block>
-    <block type="cond_and"></block>
-    <block type="select_group"></block>
-    <block type="entity_table">
-        <field name="table">table</field>
-    </block>
-    <block type="entity_table_statement">
-        <field name="table">table</field>
-    </block>
-    <block type="cond_block">
-        <field name="NAME">1</field>
-    </block>
-    <block type="entitiy_column">
-        <field name="column">column</field>
-    </block>
-    <block type="block_drop"></block>
-    <block type="data_string"></block>
-    <block type="data_string_statement"></block>
+    <category name="CREATE" colour="#5ba56d">
+        <block type="block_create">
+            <value name="TABLE">
+                <shadow type="data_string">
+                    <field name="STRING">tablename</field>
+                </shadow>
+            </value>
+        </block>
+    </category>
+    <category name="ALTER">
+        <block type="block_alter"></block>
+        <block type="alter_rename_to"></block>
+        <block type="alter_rename_column"></block>
+        <block type="alter_add_column"></block>
+        <block type="columndefinition"></block>
+    </category>
+    <category name="CREATE">
+        <block type="block_create"></block>
+        <block type="columndefinition"></block>
+    </category>
+    <category name="DROP">
+        <block type="block_drop"></block>
+    </category>
+    <category name="INSERT">
+        <block type="block_insert"></block>
+    </category>
+    <category name="SELECT">
+        <block type="block_select"></block>
+        <block type="block_subselect"></block>
+        <block type="select_join"></block>
+        <block type="select_where"></block>
+        <block type="select_group"></block>
+        <block type="select_group_having"></block>
+        <block type="select_order"></block>
+        <block type="select_limit"></block>
+        <block type="cond_block"></block>
+    </category>
+    <category name="UPDATE">
+        <block type="block_update"></block>
+        <block type="update_where"></block>
+        <block type="columntovalue"></block>
+    </category>
+    <sep></sep>
+    <category name="CONDITION">
+        <block type="cond_block"></block>
+        <block type="cond_not"></block>
+        <block type="cond_or"></block>
+        <block type="cond_and"></block>
+    </category>
+    <sep></sep>
+    <category name="DATAELEMENTS">
+        <block type="data_boolean"></block>
+        <block type="data_boolean_statement"></block>
+        <block type="data_string"></block>
+        <block type="data_string_statement"></block>
+        <block type="data_number"></block>
+        <block type="data_number_statement"></block>
+        <block type="data_date"></block>
+        <block type="data_date_statement"></block>
+        <block type="data_datetime"></block>
+        <block type="data_datetime_statement"></block>
+    </category>
+    <category name="ENTITIES">
+        <block type="entity_table"></block>
+        <block type="entity_table_statement"></block>
+        <block type="entitiy_column"></block>
+        <block type="entity_column_statement"></block>
+    </category>
 </xml>
 
 <script>
