SELECT Block und Condition Block korrigiert. Wie konnte das so lange kaputt sein und man merkt es nicht. ¯\_(ツ)_/¯

--- a/dev_index.html
+++ b/dev_index.html
@@ -15,17 +15,10 @@
     <script src="custom/blocks/conditions.js"></script>
     <script src="custom/blocks/entities.js"></script>
     <script src="custom/blocks/data.js"></script>
-    <script src="custom/generators/sql.js"></script>
-    <script src="custom/generators/sql/block_alter.js"></script>
-    <script src="custom/generators/sql/block_create.js"></script>
-    <script src="custom/generators/sql/block_select.js"></script>
-    <script src="custom/generators/sql/block_drop.js"></script>
-    <script src="custom/generators/sql/block_insert.js"></script>
-    <script src="custom/generators/sql/block_update.js"></script>
-    <script src="custom/generators/sql/columndefinition.js"></script>
-    <script src="custom/generators/sql/entities.js"></script>
-    <script src="custom/generators/sql/conditions.js"></script>
-    <script src="custom/generators/sql/data.js"></script>
+	<script src="build/sql.js"></script>
+	
+
+	
     <script src="blockly/msg/js/de.js"></script>
     <script src="custom/msg/js/de.js"></script>
     <style>
